# documentation/swagger.yaml
@@ -67,6 +67,8 @@ paths:
         name: "Needed information"
         description: "Username and password to login"
         required: true
+        schema:
+          $ref: "#/definitions/Login"
       responses:
         200:
           description: "successful operation"
@@ -77,6 +79,26 @@ paths:
         500:
           description: "Internal Error"
   /Products:
+    get:
+      tags:
+      - "Products"
+      summary: "Returns all products"
+      description: "Returns a table with all product related information"
+      operationId: "getProducts"
+      parameters: 
+      - name: "Token"
+        description: "token"
+        in: "header"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+        500:
+          description: "Internal Error"
+        403:
+          $ref: '#/responses/UnauthorizedBothError'
+  /Products/create:
     post:
       tags:
       - "Products"
@@ -105,7 +127,7 @@ paths:
         403:
           $ref: '#/responses/UnauthorizedUserError'
   /products/deactivate/{Id}:
-    patch:
+    delete:
       tags:
       - "Products"
       summary: "Indicate a product is not active in database"
@@ -123,10 +145,6 @@ paths:
         required: true
         type: "integer"
         format: "int64"
-      - name: "new state"
-        in: "body"
-        description: "Deactivation"
-        required: true
       responses:
         200:
           description: "Success"
@@ -174,7 +192,7 @@ paths:
     get:
       tags:
       - "Orders"
-      summary: "Returns all orders. This can only be done by a admin"
+      summary: "Returns all orders (This can only be done by a admin) or all of the user orders (this can only be done by a user)"
       description: "Returns a table with all order related information"
       operationId: "getOrders"
       parameters: 
@@ -189,7 +207,7 @@ paths:
         500:
           description: "Internal Error"
         403:
-          $ref: '#/responses/UnauthorizedUserError'
+          $ref: '#/responses/UnauthorizedBothError'
   /orders/create:
     post:
       tags:
@@ -216,32 +234,14 @@ paths:
           description: "Internal Error"
         403:
           $ref: '#/responses/UnauthorizedAdminError'
-  /orders/Myorders:
-    get:
-      tags:
-      - "Orders"
-      summary: "Find purchase order by ID, to show details. This can only be done by a user"
-      description: "A user can get an order"
-      operationId: "getOrderById"
-      responses:
-        200:
-          description: "successful operation"
-        500:
-          description: "Internal Error"
-        403:
-          $ref: '#/responses/UnauthorizedAdminError'
   /orders/{Id}:  
-    put:
+    patch:
       tags:
       - "Orders"
       summary: "Find purchase order by ID, to update status"
       description: "An administrator can update an order."
       operationId: "putOrderById"
       parameters:
-      - in: "body"
-        name: "body"
-        description: "Order object that needs to be added to the store"
-        required: true
       - name: "Id"
         in: "path"
         description: "ID of order that needs to be fetched"
@@ -250,6 +250,12 @@ paths:
         maximum: 10.0
         minimum: 1.0
         format: "int64"
+      - name: "New State"
+        in: "body"
+        description: "New state of the order"
+        required: true
+        schema:
+          $ref: "#/definitions/NewState"
       responses:
         200:
           description: "successful operation"
@@ -281,6 +287,16 @@ definitions:
         example: De las acacias 139
       Password:
         type: "string"
+        example: hola123
+  Login:
+    type: "object"
+    properties:
+      Username:
+        type: "string"
+        example: VickyCalvo
+      Password:
+        type: "string"
+        example: hola123
   Product:
     type: "object"
     properties:
@@ -312,10 +328,10 @@ definitions:
         example: debito
       createdAt:
         type: "string"
-        example: 2007-05-10 00:00:00
+        example: "2007-05-10 00:00:00"
       updatedAt:
         type: "string"
-        example: 2007-05-10 00:00:00
+        example: "2007-05-10 00:00:00"
       paymentValue:
         type: "integer"
         example: 19.99
@@ -334,6 +350,12 @@ definitions:
             productCuantity:
               type: "integer"
               example: 2
+  NewState:
+    type: object
+    properties:
+      state:
+        type: "string"
+        example: preprando/entregado/cancelado
 
    
 
@@ -347,6 +369,12 @@ responses:
         type: string
   UnauthorizedUserError:
     description: Users are not allowed to make this request
+    headers:
+      Authorization:
+        description: token
+        type: string
+  UnauthorizedBothError:
+    description: Nobody is allowed to make this request
     headers:
       Authorization:
         description: token
