# middlewares/validations.js
@@ -1,14 +1,17 @@
+const database = require('../database/connection'); 
+const { response } = require('express');
 const validations = {}
 
 
-//valido que el usuario ingrese todos los datos pedidos como corresponde
+//valido que el usuario ingrese todos los datos pedidos como corresponde para registrarse
 validations.requireDataUserRegister = (req, res, next) => {
     const username = req.body.username;
     const password = req.body.password;
     const fullName = req.body.fullName;
     const email = req.body.email;
+    const address = req.body.address
     const phoneNumber = req.body.phoneNumber;
- 
+
     if (typeof(username) !== "string") {
         res.status(400).json({
             mensaje: 'There was a problem with the username'
@@ -26,7 +29,7 @@ validations.requireDataUserRegister = (req, res, next) => {
         res.status(400).json({
             mensaje: 'There was a problem with the email'
     });
-    }else if (typeof(adress) !== "string") {
+    }else if (typeof(address) !== "string") {
         res.status(400).json({
             mensaje: 'There was a problem with the adress'
     });
@@ -38,13 +41,12 @@ validations.requireDataUserRegister = (req, res, next) => {
         next()
     }
 }
- 
 
-//valido que el usuario ingrese todos los datos pedidos como corresponde
+
+//valido que el usuario ingrese todos los datos pedidos como corresponde para el inicio de sesión
 validations.requireDataUserLogin = (req, res, next) => {
     const username = req.body.username;
     const password = req.body.password;
- 
     if (typeof(username) !== "string") {
         res.status(400).json({
             mensaje: 'There was a problem with the username'
@@ -54,10 +56,8 @@ validations.requireDataUserLogin = (req, res, next) => {
         res.status(400).json({
             mensaje: 'There was a problem with the password'
         });
-
     }else {
         next()
-
     }
 }
 
@@ -68,7 +68,8 @@ validations.requireDataCreateProduct = (req, res, next) => {
     const description = req.body.description;
     const price = req.body.price;
     const imageSrc = req.body.imageSrc;
- 
+
+    
     if (typeof(name) !== "string") {
         res.status(400).json({
             mensaje: 'There was a problem with the name'
@@ -90,54 +91,55 @@ validations.requireDataCreateProduct = (req, res, next) => {
         next()
     }
 }
- 
-validations.requireDataCreateOrder = (req, res, next) => {
-    const id_user = req.body.id_user;
-    const state = req.body.state;
-    const createdAt = req.body.createdAt;
-    const description = req.body.products;
-    const paymentMethod = req.body.paymentMethod;
-    const paymentValue = req.body.paymentValue;
-    const updatedAt = req.body.updatedAt;
 
-    console.log(typeof(description))
+//valido que los datos sean del tipo correspondiente, si es que fueron incluidos en la query y no son undefined
+validations.requireDataModifyProduct = (req, res, next) => {
+    const name = req.body.name;
+    const description = req.body.description;
+    const price = req.body.price;
+    const imageSrc = req.body.imageSrc;
 
- 
-    if (typeof(id_user) !== "number") {
+    console.log(typeof(name))
+    
+    if (typeof(name) !== "string" && typeof(name) !== "undefined") {
         res.status(400).json({
-            mensaje: 'There was a problem with the user id'
+            mensaje: 'There was a problem with the name'
         });
-    }else if (typeof(state) !== "string") {
-        res.status(400).json({
-            mensaje: 'There was a problem with the state'
-        });
-    }else if (typeof(createdAt) !== "string") {
-        res.status(400).json({
-            mensaje: 'There was a problem with the created date and/or time'
-    });
-    }else if (typeof(description) !== "object") {
+    }
+    else if (typeof(description) !== "string" && typeof(description) !== "undefined") {
         res.status(400).json({
             mensaje: 'There was a problem with the description'
-    }); 
-    }else if (typeof(paymentMethod) !== "string") {
+        });
+    }else if (typeof(price) !== "number" && typeof(price) !== "undefined") {
         res.status(400).json({
-            mensaje: 'There was a problem with the payment method'
-    }); 
-    }else if (typeof(paymentValue) !== "number") {
+            mensaje: 'There was a problem with the price'
+        });
+    }else if (typeof(imageSrc) !== "string" && typeof(imageSrc) !== "undefined") {
         res.status(400).json({
-            mensaje: 'There was a problem with the payment value'
-    });
-    }else if (typeof(updatedAt) !== "string") {
-        res.status(400).json({
-            mensaje: 'There was a problem with the updated date and/or time'
-    });      
+            mensaje: 'There was a problem with the image source'
+    });   
     }else {
         next()
     }
-
-
 }
 
+//valido que se ingresen correctamente todos los campos necesarios para crear una orden
+validations.requireDataCreateOrder = (req, res, next) => {
+    const paymentMethod = req.body.paymentMethod;
+    if (typeof(paymentMethod) !== "string") {
+        res.status(400).json({
+            mensaje: 'There was a problem with the payment method'
+        }); 
+    } else if (!Array.isArray(req.body.products)) {
+        res.status(400).json({
+            mensaje: 'There was a problem with the products'
+        }); 
+    } else {
+        next()
+    }
+}
+
+//valido que se ingrese correcatamente un nuevo estado de orden 
 validations.requireDataModifyOrderStatus = (req, res, next) => {
     const state = req.body.state;
     if (typeof(state) !== "string") {
@@ -150,38 +152,38 @@ validations.requireDataModifyOrderStatus = (req, res, next) => {
     }
 }
 
+
+//valido que existan los productos que se cargán en la orden. 
 validations.ProductsIdExistCreateOrder = (req, res, next) => {
-    
-    let productsArray = req.body.products
-    for (let i = 0; i < productsArray.length; i++) {
-
-        const productId = productsArray[i].id
-        let product= {};
-        
-        database.query('SELECT * FROM products where id=:id',
-         {
-            type: sequelize.QueryTypes.SELECT,
-            replacements : {
-                id: productId
-            }
-        }).then (rta => {
-
-            if(rta.length !== 0) {
-                next()
-            }else{
+    const productsArray = req.body.products;
+    const productsIds = productsArray.map(product => product.id);
+    const productsWhere = `WHERE ${productsIds.map(productId => `id=${productId}`).join(' OR ')}`;
+    database
+        .query(`SELECT * FROM products ${productsWhere}`, {
+            type: sequelize.QueryTypes.SELECT
+        })
+        .then(products => {
+            if (products.length !== productsArray.length) {
                 res.status(404).json({
                     response: {
-                        message: 'Product not found',
+                        message: 'One or more products not found',
                     }
                 });
+            } else {
+                //guardo en req.locals los id de los productos que forman parte de la orden 
+                req.locals = {
+                    ...req.locals,
+                    products
+                }
+                next();
             }
-
         })
-}}
+        .catch(err => res.status(500).json(err))
+}
 
 
+//valido que exista el usuario que realize la orden 
 validations.UserIdExistCreateOrder = (req, res, next) => {
-
     database.query( 
         'SELECT * FROM users where id= :userId',
          {
@@ -191,7 +193,6 @@ validations.UserIdExistCreateOrder = (req, res, next) => {
             }
         }
     ).then(response => {
-        //si encontro uno en la tabla de datos, creo el token de inicio de sesión del usuario 
         if (response.length !==0){
             next()
         }else{
@@ -200,6 +201,4 @@ validations.UserIdExistCreateOrder = (req, res, next) => {
            });
         }})
 }
-
-
 module.exports = validations
