# routes/orders.js
@@ -1,20 +1,13 @@
 const express = require('express');
 const router = express.Router();
 const controller = require('../controllers/orders');
-const auth = require('../controllers/authorizations');
-const validations = require('../controllers/validations')
-
+const auth = require('../middlewares/authorizations');
+const validations = require('../middlewares/validations');
 
 // Routes
-
-router.get('/',auth.admin, controller.showAllOrders); 
-router.get('/myOrders',auth.user, controller.showUserOrders); 
-router.get('/detailedOrder', controller.showDetailedOrder)
-router.post('/',auth.admin, validations.requireDataCreateOrder, validations.ProductsIdExistCreateOrder, validations.UserIdExistCreateOrder,controller.createOrder); //esto va con auth us
+router.get('/', auth.both, controller.getOrders);
+router.get('/:id', auth.both, controller.getOrders);
+router.post('/', auth.both, validations.requireDataCreateOrder, validations.ProductsIdExistCreateOrder, controller.createOrder); //esto va con auth us
 router.patch('/:id', auth.admin, validations.requireDataModifyOrderStatus, controller.modifyOrderStatus);
-
-
-
-
 
 module.exports = router;
